# Le-Dat-Converter

./: .gitignore  DAT-FORMAT.md  PROJECT-PLAN.md  README.md  pyproject.toml  serve.py  start_server.py
examples/: demo.py
js/: datfile.js
js/formats/: dm1812.js  dmx.js  qed3110.js  registry.js
ledat/: __init__.py  datfile.py
ledat/formats/: __init__.py  dm1812.py  dmx.py  qed3110.py
web/: app.js  controller.html  index.html  style.css
web/animations/Cozy Warm/: animation.json
web/animations/Fire Flicker/: animation.json
web/animations/Ocean Breeze/: animation.json
web/animations/Party Strobe/: animation.json
web/animations/Rainbow Wave/: animation.json
web/animations/Sparkle Burst/: animation.json
web/core/: events.js  state.js  utils.js
web/effects/Aurora/: meta.json
web/effects/Fire/: meta.json
web/effects/Fireflies/: meta.json
web/effects/Ocean Waves/: meta.json
web/effects/Solid Color/: meta.json
web/effects/Sparkle/: meta.json
web/effects/Summer at the pool/: meta.json
web/output/: export.js
web/player/: player.js  viewer-toolbar.js  viewport.js
web/rack/: port-model.js  rack.js  selection.js
web/renderer/: sampling.js
web/scene/: load.js  save.js
web/tools/: toolbar.js
web/tools/controller/: HOWTO-NEW-CONTROLLER-TOOL.md  registry.js
web/tools/controller/points/: howto.md
web/tools/controller/saveload/: howto.md  tool.js
web/tools/points/: howto.md  tool.js
web/tools/saveload/: howto.md  tool.js
web/tools/scene/: HOWTO-NEW-SCENE-TOOL.md  registry.js
web/tools/transform/: howto.md  tool.js
(+2 files in other folders)
