[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledat"
version = "0.1.0"
description = "Generate .dat files for Huacan H803TC LED controllers (LEDBuild format)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
]

[project.urls]
Repository = "https://github.com/kasparkallas/Le-Dat-Converter"
